[UPD] Create template route
